fixed footer logo and align text

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -6,9 +6,15 @@
   width: 100%;
 }
 
+.footer p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .footer img {
   width: 30px;
   height: 30px;
   margin: 0 1rem;
-  color: black;
+  filter: invert(1);
 }
